Add favicons for different sizes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
-  "private": true,
+	"private": true,
+	"homepage": ".",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
