--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,20 @@
 {
-  "short_name": "React App",
+  "short_name": "Robofriends",
   "name": "Robofriends",
   "icons": [
     {
-      "src": "android-chrome-512x512.png",
-      "sizes": "512x512",
+      "src": "favicon.ico",
+      "sizes": "32x32 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon.ico",
-      "sizes": "32x32 16x16",
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
