--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "nock": "^10.0.6",
+    "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "snapshotSerializers": [
