--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "husky": "^3.0.1",
+    "pretty-quick": "^1.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -42,11 +44,17 @@
     "enzyme-to-json": "^3.3.5",
     "gh-pages": "^2.0.1",
     "nock": "^10.0.6",
+    "prettier": "1.18.2",
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
